[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/tutorial/TutorialVision.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dynamic/screen_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/dynamic/normal_text.tres" type="DynamicFont" id=3]
[ext_resource path="res://menus/buttons/MenuButton.tscn" type="PackedScene" id=4]

[node name="TutorialVision" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.94507
margin_right = -3.94507
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 118.708
margin_top = 80.0
margin_right = 902.708
margin_bottom = 520.0
custom_constants/separation = 30

[node name="Title" type="Label" parent="Menu"]
margin_right = 784.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tutorial: modo visão"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
margin_top = 104.0
margin_right = 784.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_constants/line_separation = 7
text = "    No modo “visão”, o jogador deverá utilizar as teclas cima, baixo, direita e esquerda para mover-se na sala, buscando as chaves que destrancam a porta de saída e abrindo ela.

    Nesta sala existirão monstros invisíveis, dos quais você não pode se aproximar. A indicação de onde eles podem estar virá do jogador do modo “audição”."

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 389.0
margin_right = 784.0
margin_bottom = 440.0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 324.0
margin_right = 459.0
margin_bottom = 51.0
custom_constants/separation = 34
alignment = 1

[node name="BackButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_right = 135.0
margin_bottom = 51.0
text = "Voltar"
scene_to_load = "res://menus/tutorial/TutorialSelect.tscn"
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/BackButton" to="." method="_on_BackButton_focus_entered"]
